--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@ layout: default
 ---
 
 <section class="home-section home-section-1">
-  <h1>Hear We Art</h1>
+  <h1 class="uppercase">Hear We Art</h1>
   <h2>empowering through creativity</h2>
 </section>
 
 <section class="home-section home-section-2">
   <div class="content-container">
-    <p><em>Hear We Art is a project which will be specifically designed for the hearing and visually impaired, including children from 4 to 18 years old.</em></p>
+    <p class="dark-orange"><em>Hear We Art is a project which will be specifically designed for the hearing and visually impaired, including children from 4 to 18 years old.</em></p>
 
     <p>Hear We Art will aim to enrich children skills and abilities in practical artmaking. Our strong believe is that the arts have the capacity to developsocial equity, interdependence and empowerment. It is therefore importantthat the arts are available to as many young people as possible. As The UNConvention on the Rights of Persons with Disabilities and Convention onthe Rights of the Child recognize: access to the arts is a fundamental rightfor all children and young people, the child has the right to participatefreely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities!</p>
 
-    <h4>Our Goal</h4>
+    <h4 class="uppercase">Our Goal</h4>
 
     <p>The principal benefits the programme will deliver are:</p>
     <ul>
