temporary imgs alt texts

--- a/the-program.html
+++ b/the-program.html
@@ -32,7 +32,7 @@ title: 2017 Program
 </section>
 
 <section class="text-right pure-u-1 pure-u-md-7-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-0.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-0.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-md-5-12">
@@ -49,7 +49,7 @@ title: 2017 Program
 </section>
 
 <section class="text-right pure-u-1 pure-u-md-7-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-1.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-1.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-md-5-12">
@@ -66,7 +66,7 @@ title: 2017 Program
 </section>
 
 <section class="text-right pure-u-1 pure-u-md-7-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-2.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-2.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-md-5-12">
@@ -85,7 +85,7 @@ title: 2017 Program
 </section>
 
 <section class="text-right pure-u-1 pure-u-md-7-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-3.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-3.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-md-5-12">
@@ -102,7 +102,7 @@ title: 2017 Program
 </section>
 
 <section class="text-right pure-u-1 pure-u-md-7-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-4.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/the-program-4.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-md-3-4">
