--- a/what-is-hearweart.html
+++ b/what-is-hearweart.html
@@ -18,7 +18,7 @@ title: What is hearweart
 </section>
 
 <section class="text-center pure-u-1 pure-u-md-5-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/what-is-hearweart-0.jpg' | relative_url }}">
+  <img alt="Alessia Arcuri teaching" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/what-is-hearweart-0.jpg' | relative_url }}">
 </section>
 
 <section class="pure-u-1 pure-u-md-7-12 medium-vertical-margin">
@@ -38,9 +38,9 @@ title: What is hearweart
 </section>
 
 <section class="text-center pure-u-1 pure-u-md-5-12 float-right-md heavy-vertical-margin">
-  <img class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/what-is-hearweart-1.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1 pure-u-md-11-12" src="{{ 'assets/img/what-is-hearweart-1.jpg' | relative_url }}">
 </section>
 
 <section class="text-center pure-u-1 heavy-vertical-margin">
-  <img src="{{ 'assets/img/what-is-hearweart-2.jpg' | relative_url }}">
+  <img alt="TODO" src="{{ 'assets/img/what-is-hearweart-2.jpg' | relative_url }}">
 </section>
