--- a/what-is-hearweart.html
+++ b/what-is-hearweart.html
@@ -42,5 +42,5 @@ title: What is hearweart
 </section>
 
 <section class="text-center pure-u-1 heavy-vertical-margin">
-  <img alt="TODO" src="{{ 'assets/img/what-is-hearweart-2.jpg' | relative_url }}">
+  <img alt="TODO" class="pure-u-1" src="{{ 'assets/img/what-is-hearweart-2.jpg' | relative_url }}">
 </section>
