improving htmlproofer cheking

--- a/what-is-hearweart.html
+++ b/what-is-hearweart.html
@@ -14,7 +14,7 @@ title: What is hearweart
     <p>Hear we Art has been developed specifically for Senkadagala school of deaf and blind. The school is composed by 87 deaf students and 5 blind students and has been funded in 1962, by a blind teacher Rienzie Alagiyawanna. The school is public and the children have free access and healthcare once they get in. However being a public school their funding are limited as they come from the government and many teachers who work there are volunteers.</p>
 
     <p>The school has to follow national curriculum so they need to study as regular education students in Sri Lanka. This means that the children have to learn to read and write as well as learning deaf language. In the school they also learn English and international deaf language. Most of the children struggle in keeping up with theorical subjects but they are very talented in art and expressive classes. As a result after school students get to access practical jobs and only few are able to get to further education. To meet the children natural abilities, the school board have decided to introduce a few afternoon classes, lead by volunteering tutors on subjects such as computer, photography, graphic design, woodcarving and dress making. Therefore the school teachers and principal were very happy when we presented the project, and were happy to have us there, as we are not only offering a fun experience and material supply but also a valuable training project which can empower the kids for the years to come.</p>
-  </p>
+  </div>
 </section>
 
 <section class="text-center pure-u-1 pure-u-md-5-12 float-right-md heavy-vertical-margin">
