--- a/hearweart-in-action.html
+++ b/hearweart-in-action.html
@@ -4,7 +4,7 @@ title: 2017 Gallery
 css: ['assets/lightgallery.js/dist/css/lightgallery.min.css']
 ---
 
-<div id="aniimated-thumbnials">
+<div class="gallery" id="aniimated-thumbnials">
 {% for file in site.static_files %}
   {% if file.path contains 'assets/gallery/2017/full' %}
 
