--- a/2017-gallery.html
+++ b/2017-gallery.html
@@ -1,7 +1,7 @@
 ---
-layout: page
+layout: default
 title: 2017 Gallery
-css: ['assets/lightgallery.js/dist/css/lightgallery.min.css']
+css: ['node-assets/lightgallery.js/dist/css/lightgallery.min.css']
 ---
 
 <div class="gallery" id="aniimated-thumbnials">
@@ -20,8 +20,8 @@ css: ['assets/lightgallery.js/dist/css/lightgallery.min.css']
 {% endfor %}
 </div>
 
-<script src="{{ 'assets/lightgallery.js/dist/js/lightgallery.min.js' | relative_url }}"></script>
-<script src="{{ 'assets/lg-thumbnail.js/dist/lg-thumbnail.min.js' | relative_url }}"></script>
+<script src="{{ 'node-assets/lightgallery.js/dist/js/lightgallery.min.js' | relative_url }}"></script>
+<script src="{{ 'node-assets/lg-thumbnail.js/dist/lg-thumbnail.min.js' | relative_url }}"></script>
 
 <script>
 (function (document) {
