--- a/index.html
+++ b/index.html
@@ -2,59 +2,69 @@
 layout: default
 ---
 
-<section class="home-section home-section-1">
+<section class="home-section home-section-main">
   <h1 class="uppercase">Hear We Art</h1>
   <h2>empowering through creativity</h2>
 </section>
 
-<section class="home-section home-section-2">
+<section class="home-section">
   <div class="content-container">
-    <p class="dark-orange"><em>Hear We Art is a project which will be specifically designed for the hearing and visually impaired, including children from 4 to 18 years old.</em></p>
+    <p>Hear We Art is a project specifically designed for the hearing and visually impaired, including children from 4 to 18 years old. Our aim is to enrich children skills and abilities in practical art making. Our strong believe is that the arts have the capacity to develop social equity, interdependence and empowerment. It is therefore important that the arts are available to as many young people as possible.</p>
 
-    <p>Hear We Art will aim to enrich children skills and abilities in practical artmaking. Our strong believe is that the arts have the capacity to developsocial equity, interdependence and empowerment. It is therefore importantthat the arts are available to as many young people as possible. As The UNConvention on the Rights of Persons with Disabilities and Convention onthe Rights of the Child recognize: access to the arts is a fundamental rightfor all children and young people, the child has the right to participatefreely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities!</p>
+    <p>As The UN Convention on the Rights of Persons with Disabilities and Convention on the Rights of the Child says: “access to the arts is a fundamental right for all children and young people, the child has the right to participate freely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities.”</p>
 
-    <h4 class="uppercase">Our Goal</h4>
+    <section class="youtube medium-vertical-margin">
+      <iframe src="https://www.youtube.com/embed/W1jrlD-rNvg?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </section>
 
-    <p>The principal benefits the programme will deliver are:</p>
     <ul>
-      <li>Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
+      <h2 class="heavy-vertical-margin">How does Hear We Art work?</h2>
 
-      <li>Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
+      <li class="medium-vertical-margin">Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
 
-      <li>This will begin a process of enhancement of the children’s career and employment prospects in Graphic Design. (To be developed in 2018)</li>
+      <li class="medium-vertical-margin">Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
 
-      <li>Boost the children’s confidence, self-esteem and sense of commitment to their studies overall, and to the school.</li>
+      <li class="medium-vertical-margin">This will begin a process of enhancement of the children’s career and employment prospects in Graphic Design. (To be developed in 2018)</li>
 
-      <li>Have lots of fun and enjoyment. We all know how all kids the world over love technology and ‘getting their hands dirty’!</li>
+      <li class="medium-vertical-margin">Boost the children’s confidence, self-esteem and sense of commitment to their studies overall, and to the school.</li>
 
-      <li>Collaborate with people form different cultures and backgrounds. Exchange their creative viewpoint with artists from Rome and London to create an international inspiring collaboration.</li>
+      <li class="medium-vertical-margin">Have lots of fun and enjoyment. We all know how all kids the world over love technology and ‘getting their hands dirty’!</li>
+
+      <li class="medium-vertical-margin">Collaborate with people form different cultures and backgrounds. Exchange their creative viewpoint with artists from Rome and London to create an international inspiring collaboration.</li>
     </ul>
   </div>
 </section>
 
-<section class="rellax home-section home-section-3" data-rellax-speed="-7" data-rellax-percentage="0.5">
+<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-7" data-rellax-percentage="0.5">
 </section>
 
-<section class="home-section home-section-4">
+<section class="home-section">
   <div class="content-container">
-    <blockquote>It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
+    <h2>Senkadagala School of Deaf and Blind</h2>
 
-    Darshi, School manager
-​
-​   <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
-​
-    School Principal Gamage
+    <p class="medium-vertical-margin">Hear we Art workshop has been developed specifically for Senkadagala school of Deaf and Blind. The school is composed by 87 deaf students and 5 blind students and has been funded in 1962, by a blind teacher, Rienzie Alagiyawanna. The school is public and the children have free access and healthcare once they get in.</p>
 
-    <blockquote>Thank you I really liked the course. I learned how many things that are intuitive to me can be actually used in graphic design to make great composition and images and used to sell and decorate products. Please come back and show us more!</blockquote>
-​
-    Student
+    <p class="medium-vertical-margin">The school has to follow national curriculum so they need to study as regular education students in Sri Lanka. This means that the children <strong>have to learn to read and write as well as learning deaf language</strong>. In the school they also learn English and international deaf language. Most of the children struggle in keeping up with theoretical subjects but they are very talented in art and expressive classes. Therefore, after school, students get to access practical jobs and only few are able to get to further education.</p>
 
-    <blockquote>This workshop not only gave students practical information but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
-​
-    Gamage school director
-​
+    <p class="medium-vertical-margin">To meet the children natural abilities, the school board have decided to introduce a few afternoon classes, lead by volunteering tutors on subjects such as computer, photography, graphic design, woodcarving and dress making.</p>
   </div>
 </section>
 
-<script src="{{ 'assets/rellax/rellax.min.js' | relative_url }}"></script>
+<section class="home-section home-section-quote">
+  <div class="content-container">
+    <blockquote>It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
+    <p class="heavy-horizontal-margin">Darshi, School manager</p>
+
+    <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
+    <p class="heavy-horizontal-margin">School Principal Gamage</p>
+
+    <blockquote>Thank you I really liked the course. I learned how many things that are intuitive to me can be actually used in graphic design to make great composition and images and used to sell and decorate products. Please come back and show us more!</blockquote>
+    <p class="heavy-horizontal-margin">Student</p>
+
+    <blockquote>This workshop not only gave students practical information but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
+    <p class="heavy-horizontal-margin">Gamage school director</p>
+  </div>
+</section>
+
+<script src="{{ 'node-assets/rellax/rellax.min.js' | relative_url }}"></script>
 <script>new Rellax('.rellax')</script>
