--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1,43 +1,50 @@
 ---
-layout: page
+layout: default
 title: Who We Are
 ---
 
-<h4 class="uppercase">The Team</h4>
-<h2>We are a group of artists, creatives and designers working together to create workshop tailored to students with visual and hearing impairments.</h2>
+<div class="bg-light-gray">
+  <div class="content-container">
+    <h2 class="heavy-vertical-margin">The Team</h2>
 
-<p>The project is coordinated by Olga Hendel and has been developed by Sekme Art Lab (an international group of artists working toghether as a collective). The collective is composed by professional creative practitioners together with artists who have years of experience in teaching disadvantaged young people in UK, Italy, India and Australia and are joining forces to give life to a very comprehensive project that will include the Arts in many different forms: Graphic Design, Craft Making and Mural Art.</p>
+    <p class="medium-vertical-margin">We are a group of artists, creatives and designers working together to create workshop tailored to students with visual and hearing impairments.</p>
 
-<p>The project is endorsed by Nigel Bartram, a philanthropist who is dedicating his life to help children in need. Nigel is the director of school in Paris and is now working towards setting up a UK charity.</p>
+    <p class="medium-vertical-margin">The project is coordinated by Olga Hendel and has been developed by Sekme Art Lab (an international group of artists working toghether as a collective). The collective is composed by professional creative practitioners together with artists who have years of experience in teaching disadvantaged young people in UK, Italy, India and Australia and are joining forces to give life to a very comprehensive project that will include the Arts in many different forms: Graphic Design, Craft Making and Mural Art.</p>
 
-<h4 class="uppercase light-blue">Project Coordinator</h4>
-<h3 class="dark-blue">Olga Hendel</h3>
-<p class="pure-u-1 pure-u-md-1-2">Olga Hendel graduated from Camberwell College of Arts in 2015. She has been working since then as a freelancer artist in Rome. In 2012 she co-founded IdenticonArts, a LdT community interest company based in London whose objective is to work with disadvantaged groups fromyoung to elderly people to encourage self expression through art and craft making. Some of her workshops include Skills Show Birmingham Festival, Art for inclusion in Ukrain and Sp8 of the Arts London. She also curated the independent publication project QUIET! Magazine, Homegrown festival in Brixton and AR.CO laboratory. In 2016 Olga moved to Rome where she applied to Art Therapies Master Diploma in University of Roma Tre, to continue sharing her passion and love of art with people creating interesting and beautiful outcomes.</p>
+    <p class="medium-vertical-margin">The project is endorsed by Nigel Bartram, a philanthropist who is dedicating his life to help children in need. Nigel is the director of school in Paris and is now working towards setting up a UK charity.</p>
+  </div>
+</div>
 
-<section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md medium-vertical-margin">
-  <img alt="Olga Hendel" class="pure-u-1" src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
-</section>
 
-<h4 class="uppercase light-blue">Graphic Design Tutor</h4>
-<h3 class="dark-blue">Alessia Arcuri</h3>
-​<p class="pure-u-1 pure-u-md-1-2">Alessia Arcuri is an Italian graphic designer based in London. Alessia agraduated with a First Class Honours for the BA(Hons) in Graphic and Media Design at London College of Communication (University of the Arts) in 2016. Alessia’s design practice is cross-media, both analogue and digital. She currently works on a variety of fields including online and offline editorial design, brand identity, web design and animation. She worked as an Assistant Technicians in London College of Communication 3D Workshop during the Spring Semester 2017 - where she gained further expertise with Laser Cutting Machine, Job Control Pro and Illustrator. She is now working as a Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline version of the editorial platform. Alessia also worked for Tate Modern London designing  the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
+<div class="content-container font-weight-light">
 
-<section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md medium-vertical-margin">
-  <img alt="Alessia Arcuri" class="pure-u-1" src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
-</section>
+  <h4 class="uppercase light-gray font-weight-normal">Project Coordinator</h4>
 
-<h4 class="uppercase light-blue">Art Tutor and Mural Artist</h4>
-<h3 class="dark-blue">Morganico</h3>
-<p class="pure-u-1 pure-u-md-1-2">Morganico is a British artist working in London since 1996 producing large scale murals for the London councils of Southwark, Lambeth and Hillingdon and a variety of other clients &amp; personal street art projects having started in a graffiti background as a youth. He is one of the selected 4000 international artists to join the prestigious Chelsea Art Club started in the Victorian era by James McNeil Whistler of the pre-Raphaelites fame. His most recent large scale tree carving sculpture is located outside The Imperial War museum next to the Tibetan peace garden opened by the Dalai Lama in 1999 , the sculpture based on the theme of peace also . He also makes spray paint workshops with school children for entertainment agencies.</p>
+  <h2 class="dark-gray font-weight-normal">Olga Hendel</h3>
 
-<section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-  <img alt="Morganico" class="pure-u-1" src="{{ 'assets/img/morganico.jpg' | relative_url }}">
-</section>
+  <p class="pure-u-1 pure-u-md-1-2 font-size-small">Olga Hendel graduated from Camberwell College of Arts in 2015. She has been working since then as a freelancer artist in Rome. In 2012 she co-founded IdenticonArts, a LdT community interest company based in London whose objective is to work with disadvantaged groups fromyoung to elderly people to encourage self expression through art and craft making. Some of her workshops include Skills Show Birmingham Festival, Art for inclusion in Ukrain and Sp8 of the Arts London. She also curated the independent publication project QUIET! Magazine, Homegrown festival in Brixton and AR.CO laboratory. In 2016 Olga moved to Rome where she applied to Art Therapies Master Diploma in University of Roma Tre, to continue sharing her passion and love of art with people creating interesting and beautiful outcomes.</p>
 
-<h4 class="uppercase light-blue clear-both">Patron and Funding Member</h4>
-<h3 class="dark-blue">Nigel Bartram</h3>
-<p class="pure-u-1 pure-u-md-1-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
+  <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md medium-vertical-margin">
+    <img alt="Olga Hendel" class="pure-u-1" src="{{ 'assets/img/olga-hendel.jpg' | relative_url }}">
+  </section>
 
-<section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
-  <img alt="Nigel Bartram" class="pure-u-1" src="{{ 'assets/img/nigel-bartram.jpg' | relative_url }}">
-</section>
+  <h4 class="uppercase light-gray font-weight-normal">Graphic Design Tutor</h4>
+
+  <h2 class="dark-gray font-weight-normal">Alessia Arcuri</h2>
+
+  ​<p class="pure-u-1 pure-u-md-1-2 font-size-small">Alessia Arcuri is an Italian graphic designer based in London. Alessia agraduated with a First Class Honours for the BA(Hons) in Graphic and Media Design at London College of Communication (University of the Arts) in 2016. Alessia’s design practice is cross-media, both analogue and digital. She currently works on a variety of fields including online and offline editorial design, brand identity, web design and animation. She worked as an Assistant Technicians in London College of Communication 3D Workshop during the Spring Semester 2017 - where she gained further expertise with Laser Cutting Machine, Job Control Pro and Illustrator. She is now working as a Lead Designer and Art Director for Screen Shot Magazine, curating the design for both the online and offline version of the editorial platform. Alessia also worked for Tate Modern London designing  the poster programme for Future Medina Workshop in late 2016. Other clients and collaborations includes: London Science Museum, Jungle Creations and Downstairs Collective.</p>
+
+  <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md medium-vertical-margin">
+    <img alt="Alessia Arcuri" class="pure-u-1" src="{{ 'assets/img/alessia-arcuri.jpg' | relative_url }}">
+  </section>
+
+  <h4 class="uppercase light-gray font-weight-normal">Art Tutor and Mural Artist</h4>
+
+  <h2 class="dark-gray font-weight-normal">Morganico</h2>
+
+  <p class="pure-u-1 pure-u-md-1-2 font-size-small">Morganico is a British artist working in London since 1996 producing large scale murals for the London councils of Southwark, Lambeth and Hillingdon and a variety of other clients &amp; personal street art projects having started in a graffiti background as a youth. He is one of the selected 4000 international artists to join the prestigious Chelsea Art Club started in the Victorian era by James McNeil Whistler of the pre-Raphaelites fame. His most recent large scale tree carving sculpture is located outside The Imperial War museum next to the Tibetan peace garden opened by the Dalai Lama in 1999 , the sculpture based on the theme of peace also . He also makes spray paint workshops with school children for entertainment agencies.</p>
+
+  <section class="pure-u-1 pure-u-sm-2-3 pure-u-md-5-12 float-right-md">
+    <img alt="Morganico" class="pure-u-1" src="{{ 'assets/img/morganico.jpg' | relative_url }}">
+  </section>
+</div>
