--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h2>empowering through creativity</h2>
 </section>
 
-<section class="home-section">
+<section class="rellax home-section">
   <div class="content-container">
     <p>Hear We Art is a project specifically designed for the hearing and visually impaired, including children from 4 to 18 years old. Our aim is to enrich children skills and abilities in practical art making. Our strong believe is that the arts have the capacity to develop social equity, interdependence and empowerment. It is therefore important that the arts are available to as many young people as possible.</p>
 
@@ -35,10 +35,10 @@ layout: default
   </div>
 </section>
 
-<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-7" data-rellax-percentage="0.5">
+<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-7" data-rellax-percentage="0.3">
 </section>
 
-<section class="home-section">
+<section class="rellax home-section">
   <div class="content-container">
     <h2>Senkadagala School of Deaf and Blind</h2>
 
@@ -50,7 +50,7 @@ layout: default
   </div>
 </section>
 
-<section class="home-section home-section-quote">
+<section class="rellax home-section home-section-quote">
   <div class="content-container">
     <blockquote>It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
     <p class="heavy-horizontal-margin">Darshi, School manager</p>
