--- a/contact-us.html
+++ b/contact-us.html
@@ -4,11 +4,11 @@ title: Contact Us
 ---
 
 <section class="contact-us">
-  <div class="content-container">
-    <h3 class="light-blue uppercase">Contact Us</h3>
+  <h3 class="light-blue uppercase">Contact Us</h3>
 
-    <p>If you want to collaborate, know more, donate or just feeling like say hello, don't hesitate to drop us an email and tell us what you think about the project!</p>
+  <p class="no-margin contact-message">If you want to collaborate, know more, donate or just feeling like say hello, don't hesitate to drop us an email and tell us what you think about the project!</p>
 
-    <a class="dark-blue contact-mail" href="mailto:{{ site.email }}">{{ site.email }}</a>
-  </div>
+  <p class="heavy-vertical-margin">
+    <a class="dark-blue" href="mailto:{{ site.email }}">{{ site.email }}</a>
+  </p>
 </section>
