--- a/donate.html
+++ b/donate.html
@@ -3,6 +3,6 @@ layout: default
 title: Please Donate
 ---
 
-<div class="please-donate">
+<section class="donate">
   <p class="text-center"><strong>Hear We Art</strong> is run by donation, which are 100% directed to help us running our yearly workshops. Scroll down if you want to donate or if you are thinking about joining us!</p>
-</div>
+</section>
