--- a/index.html
+++ b/index.html
@@ -3,66 +3,68 @@ layout: default
 ---
 
 <section class="home-section home-section-main">
-  <h1 class="uppercase">Hear We Art</h1>
-  <h2>empowering through creativity</h2>
+  <div class="text-center">
+    <h1 class="no-margin uppercase">Hear We Art</h1>
+    <h2 class="no-margin">empowering through creativity</h2>
+  </div>
 </section>
 
-<section class="rellax home-section">
+<section class="home-section">
   <div class="content-container">
-    <p>Hear We Art is a project specifically designed for the hearing and visually impaired, including children from 4 to 18 years old. Our aim is to enrich children skills and abilities in practical art making. Our strong believe is that the arts have the capacity to develop social equity, interdependence and empowerment. It is therefore important that the arts are available to as many young people as possible.</p>
+    <p class="heavy-margin-top">Hear We Art is a project specifically designed for the hearing and visually impaired, including children from 4 to 18 years old. Our aim is to enrich children skills and abilities in practical art making. Our strong believe is that the arts have the capacity to develop social equity, interdependence and empowerment. It is therefore important that the arts are available to as many young people as possible.</p>
 
-    <p>As The UN Convention on the Rights of Persons with Disabilities and Convention on the Rights of the Child says: “access to the arts is a fundamental right for all children and young people, the child has the right to participate freely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities.”</p>
+    <p class="heavy-margin-bottom">As The UN Convention on the Rights of Persons with Disabilities and Convention on the Rights of the Child says: “access to the arts is a fundamental right for all children and young people, the child has the right to participate freely in cultural life and have equal opportunities for cultural, artistic,recreational and leisure activities.”</p>
 
-    <section class="youtube medium-vertical-margin">
-      <iframe src="https://www.youtube.com/embed/W1jrlD-rNvg?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <section class="youtube">
+      <iframe src="https://www.youtube.com/embed/0WuZXDKJ0Ss" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <ul>
-      <h2 class="heavy-vertical-margin">How does Hear We Art work?</h2>
+      <h2>How does Hear We Art work?</h2>
 
-      <li class="medium-vertical-margin">Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
+      <li>Using recycled materials such as newspaper, plastic lids, used containers, cardboard therefore learning about eco-friendly art and sustainability.</li>
 
-      <li class="medium-vertical-margin">Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
+      <li>Full, hands-on induction for the teachers and pupils to GIMP Graphic Design software, as specifically requested by the school board.</li>
 
-      <li class="medium-vertical-margin">This will begin a process of enhancement of the children’s career and employment prospects in Graphic Design. (To be developed in 2018)</li>
+      <li>This will begin a process of enhancement of the children’s career and employment prospects in Graphic Design. (To be developed in 2018)</li>
 
-      <li class="medium-vertical-margin">Boost the children’s confidence, self-esteem and sense of commitment to their studies overall, and to the school.</li>
+      <li>Boost the children’s confidence, self-esteem and sense of commitment to their studies overall, and to the school.</li>
 
-      <li class="medium-vertical-margin">Have lots of fun and enjoyment. We all know how all kids the world over love technology and ‘getting their hands dirty’!</li>
+      <li>Have lots of fun and enjoyment. We all know how all kids the world over love technology and ‘getting their hands dirty’!</li>
 
-      <li class="medium-vertical-margin">Collaborate with people form different cultures and backgrounds. Exchange their creative viewpoint with artists from Rome and London to create an international inspiring collaboration.</li>
+      <li class="heavy-margin-bottom">Collaborate with people form different cultures and backgrounds. Exchange their creative viewpoint with artists from Rome and London to create an international inspiring collaboration.</li>
     </ul>
   </div>
 </section>
 
-<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-7" data-rellax-percentage="0.3">
+<section class="rellax home-section home-section-parallax-bg" data-rellax-speed="-6" data-rellax-percentage="0.45">
 </section>
 
-<section class="rellax home-section">
+<section class="home-section">
   <div class="content-container">
     <h2>Senkadagala School of Deaf and Blind</h2>
 
-    <p class="medium-vertical-margin">Hear we Art workshop has been developed specifically for Senkadagala school of Deaf and Blind. The school is composed by 87 deaf students and 5 blind students and has been funded in 1962, by a blind teacher, Rienzie Alagiyawanna. The school is public and the children have free access and healthcare once they get in.</p>
+    <p>Hear we Art workshop has been developed specifically for Senkadagala school of Deaf and Blind. The school is composed by 87 deaf students and 5 blind students and has been funded in 1962, by a blind teacher, Rienzie Alagiyawanna. The school is public and the children have free access and healthcare once they get in.</p>
 
-    <p class="medium-vertical-margin">The school has to follow national curriculum so they need to study as regular education students in Sri Lanka. This means that the children <strong>have to learn to read and write as well as learning deaf language</strong>. In the school they also learn English and international deaf language. Most of the children struggle in keeping up with theoretical subjects but they are very talented in art and expressive classes. Therefore, after school, students get to access practical jobs and only few are able to get to further education.</p>
+    <p>The school has to follow national curriculum so they need to study as regular education students in Sri Lanka. This means that the children <strong>have to learn to read and write as well as learning deaf language</strong>. In the school they also learn English and international deaf language. Most of the children struggle in keeping up with theoretical subjects but they are very talented in art and expressive classes. Therefore, after school, students get to access practical jobs and only few are able to get to further education.</p>
 
-    <p class="medium-vertical-margin">To meet the children natural abilities, the school board have decided to introduce a few afternoon classes, lead by volunteering tutors on subjects such as computer, photography, graphic design, woodcarving and dress making.</p>
+    <p class="heavy-margin-bottom">To meet the children natural abilities, the school board have decided to introduce a few afternoon classes, lead by volunteering tutors on subjects such as computer, photography, graphic design, woodcarving and dress making.</p>
   </div>
 </section>
 
-<section class="rellax home-section home-section-quote">
+<section class="home-section home-section-quote">
   <div class="content-container">
-    <blockquote>It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
-    <p class="heavy-horizontal-margin">Darshi, School manager</p>
+    <blockquote class="heavy-margin-top">It is a beautiful workshop tailored for student’s needs and this is something we miss a lot. Students have many benefits and learned a lot about Graphic Design and Mural painting. We hope you come again!</blockquote>
+    <p>Darshi, School manager</p>
 
     <blockquote>Many people today are complaining about present times, they say that the world is getting worst and people are more selfish forgetting about the true values. Hear We Art is a live proof that this is not true.</blockquote>
-    <p class="heavy-horizontal-margin">School Principal Gamage</p>
+    <p>School Principal Gamage</p>
 
     <blockquote>Thank you I really liked the course. I learned how many things that are intuitive to me can be actually used in graphic design to make great composition and images and used to sell and decorate products. Please come back and show us more!</blockquote>
-    <p class="heavy-horizontal-margin">Student</p>
+    <p>Student</p>
 
     <blockquote>This workshop not only gave students practical information but it also set an example for its enthusiastic tutors and the love and passion that has been transmitted with the project. Everybody in the school has been inspired by that.</blockquote>
-    <p class="heavy-horizontal-margin">Gamage school director</p>
+    <p class="heavy-margin-bottom">Gamage school director</p>
   </div>
 </section>
 
