Added alt text on gallery pics

--- a/2017-gallery.html
+++ b/2017-gallery.html
@@ -13,7 +13,7 @@ css: ['node-assets/lightgallery.js/dist/css/lightgallery.min.css']
     {% assign thumb_url = thumb_path | relative_url %}
 
     <a href="{{ full_url }}">
-      <img alt="TODO" src="{{ thumb_url }}">
+      <img alt="Hear we Art 2017 gallery {{ file.name }}" src="{{ thumb_url }}">
     </a>
 
   {% endif %}
